--- a/StudentApplication/Views/Shared/_Layout.cshtml
+++ b/StudentApplication/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><div style="color:white;margin-top:15px;margin-right:30px">Hi @Session["Username"]</div></li>
-                    <li><button class="btn btn-danger" style="margin-top:5px" onclick="location.href='@Url.Action("Logout","Login")">Logout</button></li>
+                    <li><button class="btn btn-danger" style="margin-top:5px" onclick="location.href='@Url.Action("Logout","Login")'">Logout</button></li>
                 </ul>
             </div>
         </div>
