--- a/StudentApplication/Views/Student/CourseDetailsforStudent.cshtml
+++ b/StudentApplication/Views/Student/CourseDetailsforStudent.cshtml
@@ -15,45 +15,45 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <title>CourseDetailsforStudent</title>
 </head>
-<body>
+<body style="background-color:#55765C">
     <div class="container mt-5">
-    <div class="jumbotron">
-        <div class="text-center">
-            <p><b style="font-size:20px">You are currently viewing the Department courses of 7th and 8th Semester</b></p>
-        </div>
-        <br>
-        <table class="table table-hover borderless">
-            <thead class="thead-dark">
-                <tr>
-                    <th><b>DepartmentID</b></th>
-                    <th><b>CourseID</b></th>
-                    
-                    <th><b>Course Name</b></th>
-                    <th><b>Semster</b></th>
-                    <th><b>Details</b></th>
-
-                </tr>
-            </thead>
-
-            @foreach (var item in Model)
-            {
-                <tbody class="table-info">
+        <div class="jumbotron" style="background: linear-gradient(to right, #ff9999 0%, #ccff99 100%);">
+            <div class="text-center">
+                <p style="font-size:25px;color:#434944"><b>Course details</b></p>
+            </div>
+            <br>
+            <table class="table table-hover borderless">
+                <thead class="thead-dark">
                     <tr>
-                        <td><b>@item.departmentId</b></td>
-                        <td><b>@item.courseId</b></td>
-                        <td><b>@item.courseName</b></td>
-                        <td><b>@item.semesterId</b></td>
-                        <td><a href="@Url.Action("GetLibraryDetails", "Library", new { courseID = item.courseId})"><b>Library Details</b></a></td>
+                        <th><b>DepartmentID</b></th>
+                        <th><b>CourseID</b></th>
+
+                        <th><b>Course Name</b></th>
+                        <th><b>Semster</b></th>
+                        <th><b>Details</b></th>
 
                     </tr>
+                </thead>
 
-                </tbody>
+                @foreach (var item in Model)
+                {
+                    <tbody class="table-info">
+                        <tr>
+                            <td><b>@item.departmentId</b></td>
+                            <td><b>@item.courseId</b></td>
+                            <td><b>@item.courseName</b></td>
+                            <td><b>@item.semesterId</b></td>
+                            <td><a href="@Url.Action("GetLibraryDetails", "Library", new { courseID = item.courseId})"><b>Library Details</b></a></td>
+
+                        </tr>
+
+                    </tbody>
 
 
 
-            }
+                }
 
-        </table>
+            </table>
         </div>
     </div>
 </body>
