--- a/StudentApplication/Views/Student/GradeDetailsforStudent.cshtml
+++ b/StudentApplication/Views/Student/GradeDetailsforStudent.cshtml
@@ -15,11 +15,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <title>GradeDetailsforStudent</title>
 </head>
-<body>
+<body style="background-color:#55765C">
     <div class="container mt-5">
-        <div class="jumbotron">
+        <div class="jumbotron"  style="background: linear-gradient(to right, #ff9999 0%, #ccff99 100%);">
             <div class="text-center">
-                <p><b style="font-size:20px">You are currently viewing the Grade Details of 7th and 8th Semester</b></p>
+                <p style="font-size:25px;color:#434944"><b>Grade details</b></p>
             </div>
             <br>
             <table class="table  table-hover borderless">
@@ -30,7 +30,6 @@
 
                         <th><b>Grade</b></th>
 
-                        <th><b>Details</b></th>
 
                     </tr>
                 </thead>
@@ -42,7 +41,7 @@
                             <td><b>@item.semesterName</b></td>
                             <td><b>@item.semesterMontYear</b></td>
                             <td><b>@item.grade</b></td>
-                            <td><a href=""><b>Library Details</b></a></td>
+                           
 
                         </tr>
 
