--- a/StudentApplication/Views/Teacher/CourseDetailsforTeacher.cshtml
+++ b/StudentApplication/Views/Teacher/CourseDetailsforTeacher.cshtml
@@ -16,11 +16,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <title>CourseDetailsforStudent</title>
 </head>
-<body>
-    <div class="container">
-        <div class="jumbotron">
+<body style="background-color:#55765C">
+    <div class="container mt-5">
+        <div class="jumbotron" style="background: linear-gradient(to right, #ff9999 0%, #ccff99 100%);">
             <div class="text-center">
-                <p><b>You are currently viewing the courses taken by the Lecturer</b></p>
+                <p style="font-size:25px;color:#434944"><b>Course details</b></p>
             </div>
             <table class="table text-center table-hover borderless">
                 <thead class="thead-dark">
