--- a/StudentApplication/Views/Teacher/DeptDetailsforTeacher.cshtml
+++ b/StudentApplication/Views/Teacher/DeptDetailsforTeacher.cshtml
@@ -15,11 +15,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <title>DeptDetailsforStudent</title>
 </head>
-<body>
+<body  style="background-color:#55765C">
     <div class="container mt-5">
-        <div class="jumbotron">
+        <div class="jumbotron" style="background: linear-gradient(to right, #ff9999 0%, #ccff99 100%);">
             <div class="text-center">
-                <p style="font-size:20px"><b>You are currently viewing the Department details of the LECTURER</b></p>
+                <p style="font-size:25px;color:#434944"><b>Department details</b></p>
             </div>
 
             @foreach (var item in Model)
